--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -23,3 +23,6 @@ svg {
 html {
   scroll-behavior: smooth;
 }
+h3 {
+  margin-left: 10px;
+}
