--- a/scss/components/_main-content.scss
+++ b/scss/components/_main-content.scss
@@ -5,6 +5,7 @@
 /* ==============Main header================ */
 
 .main-header {
+  margin-bottom: 1em;
   @include flexy();
   .headline-secondary {
     padding: 0 15px 0;
@@ -42,18 +43,46 @@
   }
 }
 //set width in vw for js charts
-// todo .daily,
-// .mobile {
-//   border-bottom: black solid 1px;
-// }
+
 .widget-container {
+  &-full,
+  &-half {
+    @include flexy(column) {
+      align-items: center;
+    }
+    .canvas-container {
+      padding: 0 1em 2em 1em;
+    }
+  }
   &-full {
-    max-width: 85vw;
+    .canvas-container {
+      width: 90vw;
+    }
   }
   &-half {
-    max-width: 85vw;
+    .canvas-container {
+      width: 90vw;
+      @include mq("s") {
+        width: 45vw;
+        // margin-bottom: 1em;
+      }
+    }
+  }
+}
+
+//fix alignment- align daily chart with mobile
+.daily,
+.mobile {
+  border: $border-style;
+}
+
+.mobile {
+  h3 {
+    margin-bottom: 0;
+  }
+  .canvas-container {
     @include mq("s") {
-      max-width: 42vw;
+      width: 30vw;
     }
   }
 }
@@ -105,7 +134,7 @@
 .members,
 .activity {
   &-container {
-    border-bottom: gray solid 0.6px;
+    border-bottom: $border-style;
     flex: 1;
     margin: 10px;
     padding: 10px;
